Fix the alignment of timestamp with imaeg

--- a/client/components/article/main.scss
+++ b/client/components/article/main.scss
@@ -233,7 +233,4 @@ $inline-img-width: 300px;
 		float: left;
 		margin-right: 15px;
 	}
-	.brand-top-offset {
-		padding-top: $brand-offset + 20px;
-	}
 }
